--- a/css/styles.css
+++ b/css/styles.css
@@ -90,14 +90,17 @@ body {
   background: url(https://catherineasquithgallery.com/uploads/posts/2021-02/thumbs/1613159686_14-p-zheltii-fon-pop-art-16.png);
   background-size: cover;
   position: relative;
+  
   margin: 0 auto;
   width: 300px;
-  height: 230px;
-  margin-bottom: px;
+  height: 300px;
+  /* margin-bottom: px; */
   border-top-left-radius: 14px;
   border-top-right-radius: 14px;
   padding-bottom: 0;
   overflow: hidden;
+  display: block;
+
 }
 
 .clash-card__image::before{
@@ -117,12 +120,24 @@ body {
 
 
 .clash-card__image > img {
-    width: 200px;
+  position: relative;
+  display: block;
+  width: 200px;
+  max-height: 280px;
+  margin: 20px auto;
 
-    position: absolute;
-    left: 50px;
-    top: 40px;    
 
+
+    /* position: absolute; */
+
+
+    
+    transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  }
+
+  .clash-card__image > img:hover, .clash-card__image > img:focus{
+    width: 280px;
   }
 
 
@@ -135,7 +150,11 @@ body {
 }
 
 
-
+.box-card-text{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+}
 
 .clash-card__unit-name {
   text-transform: uppercase;
@@ -158,17 +177,17 @@ body {
 .list-group{
     list-style: none;
     text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 3px;
-    color: #f1860b;
-    text-align: center;
-    padding-left: 0px;
-    margin-bottom: 50px;
- 
+    display: flex;
+    gap: 60px;
+    justify-content: center;
+    padding-left: 0;
+
 }
 
-.list-group li{
- margin-bottom: 10px;
+.list-group > li{
+  background-color: #ffb004;
+  padding: 10px;
+  border-radius: 15px;
+  color: #fafafa;
  
 }
