--- a/css/styles.css
+++ b/css/styles.css
@@ -2,15 +2,7 @@
     box-sizing: border-box;
   }
   
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #fafafa;
-    color: #212121;
-    line-height: 1.5;
-  }
+
   
   #search-box {
     font: inherit;
@@ -19,20 +11,60 @@
     margin-bottom: 16px;
   }
 
+
+
+  /* ---------------------------------------- */
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,900);
+
+
+
+.container{
+  min-width: 380px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+  /* outline: 1px solid red; */
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+body {
+  background: linear-gradient(to bottom, rgba(140,122,122,1) 0%, rgba(175,135,124,1) 65%, rgba(175,135,124,1) 100%) fixed;
+  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg') no-repeat center center fixed;
+  background-size: cover;
+  font: 14px/20px "Lato", Arial, sans-serif;
+  margin-top: 30px;
+
+}
+
+.slide-container {
+  margin: auto;
+  width: 380px;
+  text-align: center;
+}
+
+.wrapper {
+  padding-top: 40px;
+  /* padding-bottom: 40px; */
+}
+
+.wrapper:focus {
+    outline: 0;
+  }
+
   .page-btn{
+    display: block;
+    margin: 0 auto;
     width: 150px;
     height: 18px;
-    display: inline-block;
     background: rgb(235, 101, 12);
     border: none;
     height: 3em;
-    width: 11.5em;
     border-radius: 25px;
     color: #fff;
     line-height: 55px;
     font-size: 18px;
     letter-spacing: 3px;
-    transition: all 0.5s;
   }
   
   .page-btn:hover, .page-btn:focus {
@@ -46,41 +78,6 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-  }
-
-  /* ---------------------------------------- */
-@import url(https://fonts.googleapis.com/css?family=Lato:400,700,900);
-
-
-
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-body {
-  background: linear-gradient(to bottom, rgba(140,122,122,1) 0%, rgba(175,135,124,1) 65%, rgba(175,135,124,1) 100%) fixed;
-  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/coc-background.jpg') no-repeat center center fixed;
-  background-size: cover;
-  font: 14px/20px "Lato", Arial, sans-serif;
-  color: #9E9E9E;
-  margin-top: 30px;
-}
-
-.slide-container {
-  margin: auto;
-  width: 600px;
-  text-align: center;
-}
-
-.wrapper {
-  padding-top: 40px;
-  /* padding-bottom: 40px; */
-  
-
-}
-
-.wrapper:focus {
-    outline: 0;
   }
 
 
